mt4-trading-api/k8s-cluster/apps/real02/mt4-trading-api-worker-real02-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mt4-trading-api-worker-real02
  namespace: mt4-trading-api-real02
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mt4-trading-api-worker-real02
    spec:
      containers:
      - name: mt4-trading-api-worker-real02
        image: '559845540357.dkr.ecr.eu-west-2.amazonaws.com/mt4-api/test:mt4-trading-api-server-staging15'
        resources:
          limits:
            cpu: 400m
            memory: 400Mi
          requests:
            cpu: 300m
            memory: 300Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: envfile
          mountPath: "/opt/application/.env"
          subPath: mt4-trading-api-worker-real02.env
      volumes:
      - name: envfile
        configMap:
          name: mt4-trading-api-worker-real02
