mt4-trading-api/k8s-cluster/apps/real02/mt4-trading-api-web-real02-kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mt4-trading-api-web-real02
  namespace: mt4-trading-api-real02
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: mt4-trading-api-web-real02
